# jessilib

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/bot/: CMakeLists.txt  base_commands.cpp  main.cpp  shutdown.cpp  shutdown.hpp
src/bot/console/: console.cpp  console.hpp  console_command_context.cpp  console_command_context.hpp
src/common/: CMakeLists.txt  app_parameters.cpp  config.cpp  object.cpp  serialize.cpp  thread_pool.cpp  timer.cpp  timer_manager.cpp  unicode.cpp
src/common/io/: command.cpp  command_context.cpp  command_manager.cpp  message.cpp
src/common/parser/: parser.cpp  parser_manager.cpp
src/common/parsers/: json.cpp
src/common/timer/: cancel_token.cpp  synchronized_timer.cpp  timer.cpp  timer_context.cpp  timer_manager.cpp
src/include/: app_parameters.hpp  assert.hpp  duration.hpp  object.hpp  parser.hpp  split.hpp  thread_pool.hpp  timer.hpp  type_traits.hpp  unicode.hpp  util.hpp
src/include/impl/: parser_manager.hpp  timer_context.hpp  timer_manager.hpp
src/include/io/: color.hpp  command_context.hpp  command_manager.hpp  message.hpp
src/include/io/ansi/: ansi_text.hpp
src/include/io/irc/: irc_text.hpp
src/include/jessilib/: app_parameters.hpp  asio.hpp  assert.hpp  config.hpp  http_query.hpp  object.hpp  parser.hpp  serialize.hpp  split.hpp  text_encoding.hpp  thread_pool.hpp  timer.hpp  type_traits.hpp  unicode.hpp  unicode_base.hpp  unicode_compare.hpp  unicode_sequence.hpp  unicode_syntax.hpp  util.hpp  word_split.hpp
src/include/jessilib/io/: color.hpp  command.hpp  command_context.hpp  command_manager.hpp  message.hpp
src/include/jessilib/io/ansi/: ansi_text.hpp
src/include/jessilib/io/irc/: irc_text.hpp
src/include/jessilib/parsers/: json.hpp
src/include/parsers/: json.hpp
src/test/: CMakeLists.txt  app_parameters.cpp  config.cpp  duration.cpp  http_query.cpp  object.cpp  parser.cpp  split.cpp  split_compilation.cpp  test.hpp  test_split.hpp  thread_pool.cpp  timer.cpp  unicode.cpp  unicode_sequence.cpp  util.cpp  word_split.cpp
src/test/io/: color.cpp
src/test/parsers/: json.cpp
